Fixed up alignment

--- a/styles/Skills.module.scss
+++ b/styles/Skills.module.scss
@@ -115,7 +115,13 @@
 }
 
 #title{
-    margin-left:10%;
+    @media (max-width: 570px) {
+        margin-left:1%;
+    }
+    @media (min-width: 580px) {
+        margin-left:10%;
+    }
+
     text-align:center;
     min-height:150px;
     align-self: center;
